new updates, fixes some outputs, and added in zip file creation

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-app/models/submission.rb
-app/models/test_case.rb
 config/environments/development.rb
 config/database.yml
 log/development.log
 tmp/
+.DS_Store
+*.*~
+Gemfile.lock
